--- a/package.json
+++ b/package.json
@@ -17,10 +17,24 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.4",
     "mongoose": "^6.2.3",
     "nodemon": "^2.0.15",
+    "prettier": "^2.5.1",
     "ts-node": "^10.5.0",
+    "typedi": "^0.10.0",
     "typescript": "^4.5.5",
     "winston": "^3.6.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,ts,json}": [
+      "prettier --write"
+    ]
   }
 }
