--- a/package.json
+++ b/package.json
@@ -7,17 +7,21 @@
   "devDependencies": {},
   "scripts": {
     "start": "nodemon",
-    "build": "tsc -p ."
+    "build": "tsc -p .",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^17.0.21",
+    "@types/nodemailer": "^6.4.4",
+    "aws-sdk": "^2.1084.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "husky": "^7.0.4",
+    "jest": "^27.5.1",
     "lint-staged": "^12.3.4",
     "mongoose": "^6.2.3",
     "nodemon": "^2.0.15",
