--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/mongoose": "^5.11.97",
     "@types/node": "^17.0.21",
     "@types/nodemailer": "^6.4.4",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/yamljs": "^0.2.31",
     "aws-sdk": "^2.1084.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
@@ -26,10 +28,13 @@
     "mongoose": "^6.2.3",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
+    "swagger-cli": "^4.0.4",
+    "swagger-ui-express": "^4.3.0",
     "ts-node": "^10.5.0",
     "typedi": "^0.10.0",
     "typescript": "^4.5.5",
-    "winston": "^3.6.0"
+    "winston": "^3.6.0",
+    "yamljs": "^0.3.0"
   },
   "husky": {
     "hooks": {
